myweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-web
spec:
  selector:
    app: guestbook
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
